--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,16 +2,6 @@ name: Create Release
 
 on:
   workflow_dispatch:
-    inputs:
-      version_type:
-        description: 'Version bump type'
-        required: true
-        default: 'patch'
-        type: choice
-        options:
-        - patch
-        - minor
-        - major
   push:
     tags:
       - 'v*'
@@ -21,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Generate version and release info
         id: version
@@ -33,37 +25,36 @@ jobs:
             echo "version=$VERSION" >> $GITHUB_OUTPUT
             echo "release_name=CoreTax Bulk Download v$VERSION" >> $GITHUB_OUTPUT
           else
-            # For manual triggers or branch pushes, generate version
-            CURRENT_VERSION="2.1.0"
-            if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-              VERSION_TYPE="${{ github.event.inputs.version_type }}"
-            else
-              VERSION_TYPE="patch"
-            fi
+            # Read current version from Chrome manifest
+            CURRENT_VERSION=$(grep '"version"' chrome/manifest.json | sed 's/.*"version": *"\([^"]*\)".*/\1/')
+            echo "Current version: $CURRENT_VERSION"
             
-            # Simple version bumping
+            # Auto bump patch version
             IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
             MAJOR=${VERSION_PARTS[0]}
             MINOR=${VERSION_PARTS[1]}
             PATCH=${VERSION_PARTS[2]}
-            
-            case $VERSION_TYPE in
-              "major")
-                MAJOR=$((MAJOR + 1))
-                MINOR=0
-                PATCH=0
-                ;;
-              "minor")
-                MINOR=$((MINOR + 1))
-                PATCH=0
-                ;;
-              "patch")
-                PATCH=$((PATCH + 1))
-                ;;
-            esac
+            PATCH=$((PATCH + 1))
             
             NEW_VERSION="$MAJOR.$MINOR.$PATCH"
             TAG="v$NEW_VERSION"
+            
+            echo "New version: $NEW_VERSION"
+            
+            # Update Chrome manifest
+            sed -i "s/\"version\": \"$CURRENT_VERSION\"/\"version\": \"$NEW_VERSION\"/" chrome/manifest.json
+            
+            # Update Firefox manifest
+            sed -i "s/\"version\": \"$CURRENT_VERSION\"/\"version\": \"$NEW_VERSION\"/" firefox/manifest.json
+            
+            # Commit changes
+            git config --local user.email "action@github.com"
+            git config --local user.name "GitHub Action"
+            git add chrome/manifest.json firefox/manifest.json
+            git commit -m "Bump version to $NEW_VERSION" || exit 0
+            git tag $TAG
+            git push origin HEAD:${{ github.ref_name }}
+            git push origin $TAG
             
             echo "tag=$TAG" >> $GITHUB_OUTPUT
             echo "version=$NEW_VERSION" >> $GITHUB_OUTPUT
@@ -94,11 +85,6 @@ jobs:
           name: ${{ steps.version.outputs.release_name }}
           body: |
             ## 📦 CoreTax Bulk Download v${{ steps.version.outputs.version }}
-            
-            ### 🔥 What's New
-            - Enhanced bulk download capabilities for CoreTax documents
-            - Improved filtering and history features
-            - Better performance and reliability
             
             ### 📥 Downloads
             - **Chrome Extension**: CoreTax-Bulk-Download-Chrome-v${{ steps.version.outputs.version }}.zip
