Download extension with error logging, performance tracking, and keyboard shortcuts. - Added error log export functionality. - Improved performance metrics tracking during downloads. - Updated keyboard shortcuts for better user experience. - Enhanced language support for new features. - Refined manifest.json for better permissions and metadata.
Signed-off-by: thunderkex <thunderkex@gmail.com>

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -3,6 +3,8 @@
   "name": "CoreTax Bulk Download",
   "version": "2.1.2",
   "description": "Browser extension for bulk downloading tax documents from CoreTax with filtering and history features.",
+  "author": "thunderkex",
+  "homepage_url": "https://github.com/thunderkex/CoretaxBulk",
   "icons": {
     "16": "icons/icon.svg",
     "32": "icons/icon.svg",
@@ -11,7 +13,7 @@
   },
   "host_permissions": [
     "https://coretaxdjp.pajak.go.id/e-invoice-portal/id-ID/output-tax/*",
-    "https://coretaxdjp.pajak.go.id/e-invoice-portal/id-ID/input-tax",
+    "https://coretaxdjp.pajak.go.id/e-invoice-portal/id-ID/input-tax/*",
     "https://coretaxdjp.pajak.go.id/withholding-slips-portal/*",
     "https://coretaxdjp.pajak.go.id/returnsheets-portal/*"
   ],
@@ -28,7 +30,8 @@
       ],
       "js": ["lang.js", "content.js"],
       "css": ["styles.css"],
-      "run_at": "document_end"
+      "run_at": "document_end",
+      "all_frames": false
     }
   ],
   "action": {
@@ -37,9 +40,11 @@
       "16": "icons/icon.svg",
       "32": "icons/icon.svg",
       "48": "icons/icon.svg"
-    }
+    },
+    "default_title": "CoreTax Bulk Download"
   },
   "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self' 'unsafe-inline'"
-  }
+    "extension_pages": "script-src 'self'; object-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; connect-src 'self'"
+  },
+  "minimum_chrome_version": "88"
 }
