--- a/firefox/manifest.json
+++ b/firefox/manifest.json
@@ -9,7 +9,9 @@
     "gecko": {
       "id": "coretaxbulk@thunderkex.github.io",
       "strict_min_version": "109.0",
-      "data_collection_permissions": false
+      "data_collection_permissions": {
+        "required": ["none"]
+      }
     }
   },
   "icons": {
